added auxiliary modules
